load("@rules_cc//cc/toolchains:toolchain.bzl", "cc_toolchain")

cc_toolchain(
    name = "host_clang",
    args = select({
        "@platforms//os:linux": [
            "////rules/toolchains/args:linux_sysroot",
        ],
        "//conditions:default": [],
    }) + [
        "//rules/toolchains/args:no_canonical_prefixes",
        "//rules/toolchains/args:warnings",
    ],
    enabled_features = ["@rules_cc//cc/toolchains/args:experimental_replace_legacy_action_config_features"],
    known_features = ["@rules_cc//cc/toolchains/args:experimental_replace_legacy_action_config_features"],
    tool_map = "//rules/toolchains/tools:all_tools",
)

toolchain(
    name = "host_cc_toolchain",
    toolchain = ":host_clang",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
