function(raygame_test _target)
    set(options NO_MAIN)
    set(oneValueArgs)
    set(multiValueArgs SOURCES DEPENDS)
    cmake_parse_arguments(RAYGAME_TESTARGS "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN})
    set(RAYGAME_TEST_USE_MAIN $<NOT:$<BOOL:${RAYGAME_TESTARGS_NO_MAIN}>>)
    add_executable(Test${_target})
    target_compile_options(Test${_target} PRIVATE -Wno-unsafe-buffer-usage)
    target_link_libraries(Test${_target} PUBLIC ${RAYGAME_TESTARGS_DEPENDS})
    target_link_libraries(Test${_target} PUBLIC doctest::doctest)
    target_sources(Test${_target} PUBLIC $<${RAYGAME_TEST_USE_MAIN}:${RAYGAME_PATH_SRC}/test/main.cpp> ${RAYGAME_TESTARGS_SOURCES})
    raygame_add_args(Test${_target})
    raygame_add_defs(Core)
    add_test(NAME Test${_target} COMMAND Test${_target})
endfunction()

raygame_test(Tests SOURCES test.cpp DEPENDS RayGame::Core)
raygame_test(Math SOURCES math.cpp DEPENDS RayGame::Core::Math)
