raygame_test(Condition SOURCES condition.cpp DEPENDS RayGame::Core::Base)
raygame_test(Debug SOURCES debug.cpp DEPENDS RayGame::Core::Base)
raygame_test(Logger SOURCES logger.cpp DEPENDS RayGame::Core::Base)
raygame_test(Matrix SOURCES matrix.cpp DEPENDS RayGame::Core::Base)
raygame_test(Types SOURCES types.cpp DEPENDS RayGame::Core::Base)
add_subdirectory(math)
add_subdirectory(serialisation)
add_subdirectory(drawing)
