raygame_test(Condition SRCS condition.cpp DEPS RayGame::Core::Base)
raygame_test(Debug SRCS debug.cpp DEPS RayGame::Core::Base)
raygame_test(Logger SRCS logger.cpp DEPS RayGame::Core::Base)
raygame_test(Matrix SRCS matrix.cpp DEPS RayGame::Core::Base)
raygame_test(Types SRCS types.cpp DEPS RayGame::Core::Base)
add_subdirectory(math)
add_subdirectory(serialisation)
add_subdirectory(drawing)
