if(RG_ENABLE_WAYLAND)
    include(RgWayland)
    target_sources(Core PUBLIC wayland.cpp wayland_impl.cpp)
    rg_target_client_protocol(TARGET Core PROTOCOLS wayland xdg-shell)
    target_link_libraries(Core PUBLIC xkbcommon)
endif()
if(RG_ENABLE_X11)
    target_sources(Core PUBLIC x11.cpp)
    target_link_libraries(Core PRIVATE X11)
endif()
